# Mold-Prevention-System

./: README.md
sensor_node1/: CMakeLists.txt  README.md  prj.conf
sensor_node1/boards/: nrf52840dk_nrf52840.overlay
sensor_node1/drivers/sensor/: Kconfig
sensor_node1/drivers/sensor/dht20/: Kconfig  dht20.c
sensor_node1/dts/bindings/sensor/: aosong,dht20.yaml
sensor_node1/src/: main.c
sensor_node1/src/modules/: CMakeLists.txt  messaging_service.c  messaging_service.h  system_health.c  system_health.h  vtt_model.c  vtt_model.h
sensor_node2/: .gitignore  prj.conf
sensor_node2/boards/: nrf52840dk_nrf52840.overlay
sensor_node2/drivers/sensor/: CMakeLists.txt
sensor_node2/drivers/sensor/dht20/: CMakeLists.txt
sensor_node2/src/: main.c
sensor_node2/src/modules/: CMakeLists.txt  messaging_service.h  system_health.h  vtt_model.c
server_node/: CMakeLists.txt  prj.conf
server_node/boards/: nrf52840dk_nrf52840.overlay
server_node/src/: main.c
server_node/src/modules/: CMakeLists.txt  network_listener.c  network_listener.h  node_manager.c  node_manager.h  serial_bridge.c  serial_bridge.h  shared_types.h
